# reel_hub

./: .gitignore  Cargo.toml  LICENCE  README.md  build.rs  reel_hub.desktop
examples/: plugin_test.py  style_test.py
src/: add_window.rs  app.rs  detect.rs  lib.rs  main.rs  main_window.rs  movie.rs  plugin.rs  res.rs  settings.rs  utils.rs  window.rs
src/add_window/: add_window.ui  imp.rs
src/main_window/: imp.rs  keymaps.rs  main_window.ui
src/movie/: tmdb.rs
src/res/style/: style.css
src/resources/: resources.gresource.xml  window.ui
src/settings/: cache_entry_row.rs  imp.rs  keymaps.rs  settings_window.ui
src/settings/cache_entry_row/: cache_entry_row.ui  imp.rs
src/window/: imp.rs  window.ui
