[package]
name = "movies"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk={version='0.17.1', package='gtk'}
walkdir='2.3.2'
regex='1.7.1'
reqwest={version='0.11.14', features=['blocking']}
glib='0.17.2'
serde_json='1.0.93'
gdk-pixbuf="0.17.10"
