[package]
name = "reel_hub"
version = "1.8.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk={version='0.17.1', package='gtk'}
walkdir='2.3.2'
regex='1.7.1'
reqwest={version='0.11.14', features=['blocking']}
glib='0.17.2'
serde={version='1.0.164', features=['derive']}
serde_json='1.0.93'
gdk-pixbuf="0.17.10"
notify="6.0.1"
symlink="0.1.0"
md5="0.7.0"
ffprobe="0.3.3"
