[package]
name = "reel_hub"
version = "1.10.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk={version='0.17.1', package='gtk'}
walkdir='2.3.3'
regex='1.9.3'
reqwest={version='0.11.18', features=['blocking']}
serde={version='1.0.183', features=['derive']}
serde_json='1.0.104'
notify="6.0.1"
symlink="0.1.0"
md5="0.7.0"
ffprobe="0.3.3"
